[package]
name = "bumparaw-collections"
version = "0.1.4"
description = "A small set of bumpalo-backed collections for low-level operations"
authors = ["Louis Dureuil <louis@meilisearch.com>", "Kerollmops <clement@meilisearch.com>"]
license = "MIT"
repository = "https://github.com/meilisearch/bumparaw-collections"
keywords = ["bumpalo", "collections", "serde", "json", "bitpacking"]
categories = ["algorithms", "data-structures"]
edition = "2021"

[dependencies]
allocator-api2 = "0.2.18"
bitpacking = "0.9.2"
bumpalo = { version = "3.16.0", features = [
    "boxed",
    "collections",
    "serde",
    "std",
    "allocator-api2",
] }
hashbrown = { version = "0.15.0", features = ["allocator-api2", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order", "raw_value"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
